# slm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  NEW_MODEL.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
CV_Live_Model_TCN/: Live_Test_TCN.py  Model_Training_TCN.py
configs/: default.yaml
models/: class_mapping.json
realtime-optimized/: Live_Test_TCN.py  Model_Test.py  Model_Training.py  best_bilstm_attn.pt  best_tcn_causal_meta.json  paths_test.txt  paths_train.txt  paths_val.txt
scripts/: consolidate_dataset.py  export_onnx.py  export_tcn_compatible.sh  export_tcn_onnx.py  filter_dataset.py  fix_onnx_model.py  preprocess_dataset.py
src/inference/: __init__.py  api.py  predictor.py
src/models/: __init__.py  base.py  lstm.py  tcn.py
src/training/: evaluate.py  losses.py  train.py  trainer.py
src/utils/: device.py  logger.py
tests/: test_api.py  test_data.py  test_models.py
web/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/public/: model_baseline.onnx  model_npy.onnx  model_tcn_norm_stats.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Footer.tsx  Header.tsx  Logo.tsx  ModelLoader.tsx  RealtimeWebcamCapture.tsx  RealtimeWebcamCaptureV2.tsx  ThemeProvider.tsx  Toast.tsx  TranslationResult.tsx  VideoInferencePlayer.tsx  VideoUpload.tsx  WebcamCapture.tsx  index.ts
web/src/hooks/: useRealtimeInference.ts  useRealtimeInferenceV2.ts  (+1 more)
web/src/lib/: api.ts  (+4 more)
(+10 files in other folders)
